Connect Vertex broken (not working with more than 2 vertices) #57028

Closed
opened 2018-10-03 00:51:41 +02:00 by ThinkingPolygons · 5 comments

System Information
Win 10 64bits

Blender Version
Broken: 2.80 alpha 2 60d4d58376
Worked: 2.79

Short description of error
Connect Vertex function is not working with more than 2 vertices

Exact steps for others to reproduce the error
Any mesh, if you select 2 vertices and call this function (Vertex menu/Connect Vertex Pairs) it works, but if you select more than 2 vertices it does nothing, while in 2.79 it works flawlessly.
Note: In the Vertex menu this function is called "Connect Vertex Pairs". In the search box (F3) it's called "Vertex Connect".

Video example (2.8 on the left, 2.79 on the right)

2018-10-02_23-20-03.mp4

**System Information** Win 10 64bits **Blender Version** Broken: 2.80 alpha 2 60d4d583760 Worked: 2.79 **Short description of error** Connect Vertex function is not working with more than 2 vertices **Exact steps for others to reproduce the error** Any mesh, if you select 2 vertices and call this function (Vertex menu/Connect Vertex Pairs) it works, but if you select more than 2 vertices it does nothing, while in 2.79 it works flawlessly. Note: In the Vertex menu this function is called "Connect Vertex Pairs". In the search box (F3) it's called "Vertex Connect". Video example (2.8 on the left, 2.79 on the right) [2018-10-02_23-20-03.mp4](https://archive.blender.org/developer/F4911989/2018-10-02_23-20-03.mp4)

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons
Member

Added subscribers: @dfelinto, @lichtwerk

Added subscribers: @dfelinto, @lichtwerk
Dalai Felinto was assigned by Philipp Oeser 2018-10-04 10:31:10 +02:00
Member

We have two operators here: MESH_OT_vert_connect and MESH_OT_vert_connect_path
These were ported two multi-object-editing in 944054fbb6 and fc7316fb54

fc7316fb54 introduced a sanity check which is not needed and prevents the operator to run successfully with more than 2 selected vertices.

@dfelinto : could you check if your sanity check is really needed? (my simple tests with D3763 show it is in fact not, also with multi-object-editing...)
If there is a need for this, we could also simplify bm_connect_vert_pair() a bit (since there is some stuff going on with false is_pair even if we left early...)

We have two operators here: `MESH_OT_vert_connect` and `MESH_OT_vert_connect_path` These were ported two multi-object-editing in 944054fbb6 and fc7316fb54 fc7316fb54 introduced a sanity check which is not needed and prevents the operator to run successfully with more than 2 selected vertices. @dfelinto : could you check if your sanity check is really needed? (my simple tests with [D3763](https://archive.blender.org/developer/D3763) show it is in fact not, also with multi-object-editing...) If there is a need for this, we could also simplify `bm_connect_vert_pair()` a bit (since there is some stuff going on with false `is_pair` even if we left early...)

This issue was referenced by 0f4064c66f

This issue was referenced by 0f4064c66ff87fa84577f0522e2f3baf030be71f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57028
No description provided.